--- a/frontend/src/component/changepassword/changepassword.css
+++ b/frontend/src/component/changepassword/changepassword.css
@@ -3,9 +3,9 @@
     flex-direction: column;
     align-items: center;
 }
-.changepasswordcontainer form{
-    width: 30%;
-    height: 40vh;
+.changeform{
+    width: 40%;
+    height: 50vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -15,17 +15,17 @@
     margin-top: 20px;
 
 }
-.changepasswordcontainer div{
+.insidechange{
     display: flex;
     flex-direction: column;
 }
-.changepasswordcontainer label{
+.changelabel{
     font-size: 20px;
    margin-bottom: 5px;
    color: #ffffff;
 
  }
-.changepasswordcontainer input{
+.changeinput{
     color: #ffffff;
     font-size: 20px;
     padding: 2px;
@@ -34,10 +34,48 @@
     background: transparent;
     border-bottom: 1px solid black;
 }
-.changepasswordcontainer button{
+.changebtn{
     font-size: 20px;
     background: transparent;
     border-radius: 10px;
     padding: 10px;
     margin-top: 20px;
-    }
+}
+@media (max-width:1050px) {
+.changeform{
+ width: 40%;
+}  
+.changeheading{
+ font-size: 60px;
+}
+   
+}
+  @media (max-width:700px) {
+.changeform{
+width: 65%;
+} 
+.changelabel{
+font-size: 18px;
+}
+.changeinput{
+font-size: 18px;
+} 
+.changeheading{
+font-size: 40px;
+} 
+}
+@media (max-width:400px) {
+.changeform{
+width: 80%;
+} 
+.changelabel{
+font-size: 15px;
+}
+.changeinput{
+font-size: 15px;
+}
+.changeheading{
+font-size: 40px;
+}
+}
+    
