--- a/frontend/src/component/navbar/navbar.css
+++ b/frontend/src/component/navbar/navbar.css
@@ -1,30 +1,45 @@
-
 .maincontainer{
     width: 100%;
     margin-top: 20px;
-    
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.maincontainer img{
+.navimage{
     height: 50px;
     margin-right: 20px;
 }
-h2{
+.navheading{
     font-size: 50px;
     color: #ffffff;
     padding: 20px;
 }
 .clickicon{
     position:absolute;
-    right: 40px;
+    right: 20px;
     
 }
-.clickicon p{
+.navpara{
     color: #ffffff;
-    margin: 3px;
+    margin: 2px;
     font-size: 20px;
     cursor: pointer;
     
+}
+@media (max-width:700px) {
+    .navheading{
+        font-size: 30px;
+    }
+}
+
+
+
+
+
+
+
+@media (max-width :400px) {
+    .navheading{
+        font-size: 20px;
+    }
 }
